cmake_minimum_required(VERSION 3.13)
project(apue C)

set(CMAKE_C_STANDARD 11)

include_directories("${PROJECT_SOURCE_DIR}/apue.3e/lib")
include_directories("${PROJECT_SOURCE_DIR}/apue.3e/include")
include_directories("/Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include")

add_subdirectory(chapter1)
add_subdirectory(chapter11)


#add_executable(chapter11/fig11_2.c)

#set(SOURCE_FILES
#        apue.3e/advio/deadlock.c
#        apue.3e/advio/lockfile.c
#        apue.3e/advio/mandatory.c
#        apue.3e/advio/mcopy2.c
#        apue.3e/advio/nonblockw.c
#        apue.3e/advio/readn.c
#        apue.3e/advio/rot13a.c
#        apue.3e/advio/rot13c2.c
#        apue.3e/advio/writen.c
#        apue.3e/daemons/init.c
#        apue.3e/daemons/reread.c
#        apue.3e/daemons/reread2.c
#        apue.3e/daemons/single.c
#        apue.3e/datafiles/getpwnam.c
#        apue.3e/datafiles/strftime.c
#        apue.3e/db/apue_db.h
#        apue.3e/db/db.c
#        apue.3e/db/t4.c
#        apue.3e/environ/cmd1.c
#        apue.3e/environ/cmd2.c
#        apue.3e/environ/doatexit.c
#        apue.3e/environ/echoarg.c
#        apue.3e/environ/getrlimit.c
#        apue.3e/environ/hello1.c
#        apue.3e/environ/opendata.c
#        apue.3e/environ/scope.c
#        apue.3e/environ/testjmp.c
#        apue.3e/exercises/asyncsocket.c
#        apue.3e/exercises/bo.c
#        apue.3e/exercises/fifo1.c
#        apue.3e/exercises/fmemopen.c
#        apue.3e/exercises/getlogin.c
#        apue.3e/exercises/getpw44bsd.c
#        apue.3e/exercises/getpwsvr4.c
#        apue.3e/exercises/goodexit.c
#        apue.3e/exercises/longpath.c
#        apue.3e/exercises/openmax.c
#        apue.3e/exercises/pendlock.c
#        apue.3e/exercises/pollmsg2.c
#        apue.3e/exercises/prtime.c
#        apue.3e/exercises/sizepipe.c
#        apue.3e/exercises/sleep.c
#        apue.3e/exercises/sleepus_poll.c
#        apue.3e/exercises/sleepus_select.c
#        apue.3e/exercises/vfork3.c
#        apue.3e/exercises/zombie.c
#        apue.3e/filedir/access.c
#        apue.3e/filedir/cdpwd.c
#        apue.3e/filedir/changemod.c
#        apue.3e/filedir/devrdev.c
#        apue.3e/filedir/filetype.c
#        apue.3e/filedir/ftw8.c
#        apue.3e/filedir/mycd.c
#        apue.3e/filedir/umask.c
#        apue.3e/filedir/unlink.c
#        apue.3e/filedir/zap.c
#        apue.3e/fileio/fileflags.c
#        apue.3e/fileio/hole.c
#        apue.3e/fileio/mycat.c
#        apue.3e/fileio/seek.c
#        apue.3e/fileio/setfl.c
#        apue.3e/include/apue.h
#        apue.3e/intro/getcputc.c
#        apue.3e/intro/hello.c
#        apue.3e/intro/ls1.c
#        apue.3e/intro/mycat.c
#        apue.3e/intro/shell1.c
#        apue.3e/intro/shell2.c
#        apue.3e/intro/testerror.c
#        apue.3e/intro/uidgid.c
#        apue.3e/ipc1/add2.c
#        apue.3e/ipc1/add2stdio.c
#        apue.3e/ipc1/devzero.c
#        apue.3e/ipc1/myuclc.c
#        apue.3e/ipc1/pipe1.c
#        apue.3e/ipc1/pipe2.c
#        apue.3e/ipc1/pipe4.c
#        apue.3e/ipc1/popen.c
#        apue.3e/ipc1/popen1.c
#        apue.3e/ipc1/popen2.c
#        apue.3e/ipc1/slock.c
#        apue.3e/ipc1/slock.h
#        apue.3e/ipc1/tellwait.c
#        apue.3e/ipc1/tshm.c
#        apue.3e/ipc2/open/main.c
#        apue.3e/ipc2/open/open.c
#        apue.3e/ipc2/open/open.h
#        apue.3e/ipc2/open.fe/main.c
#        apue.3e/ipc2/open.fe/open.c
#        apue.3e/ipc2/open.fe/open.h
#        apue.3e/ipc2/opend/cliargs.c
#        apue.3e/ipc2/opend/client.c
#        apue.3e/ipc2/opend/loop.poll.c
#        apue.3e/ipc2/opend/loop.select.c
#        apue.3e/ipc2/opend/main.c
#        apue.3e/ipc2/opend/opend.h
#        apue.3e/ipc2/opend/request.c
#        apue.3e/ipc2/opend.fe/cliargs.c
#        apue.3e/ipc2/opend.fe/main.c
#        apue.3e/ipc2/opend.fe/opend.h
#        apue.3e/ipc2/opend.fe/request.c
#        apue.3e/ipc2/bindunix.c
#        apue.3e/ipc2/pollmsg.c
#        apue.3e/ipc2/recvfd2.c
#        apue.3e/ipc2/sendfd2.c
#        apue.3e/ipc2/sendmsg.c
#        apue.3e/lib/bufargs.c
#        apue.3e/lib/cliconn.c
#        apue.3e/lib/clrfl.c
#        apue.3e/lib/daemonize.c
#        apue.3e/lib/error.c
#        apue.3e/lib/errorlog.c
#        apue.3e/lib/lockreg.c
#        apue.3e/lib/locktest.c
#        apue.3e/lib/nspipe.c
#        apue.3e/lib/openmax.c
#        apue.3e/lib/Orecvfd.c
#        apue.3e/lib/pathalloc.c
#        apue.3e/lib/popen.c
#        apue.3e/lib/prexit.c
#        apue.3e/lib/prmask.c
#        apue.3e/lib/ptyfork.c
#        apue.3e/lib/ptyopen.c
#        apue.3e/lib/readn.c
#        apue.3e/lib/recvfd.c
#        apue.3e/lib/semaph.c
#        apue.3e/lib/senderr.c
#        apue.3e/lib/sendfd.c
#        apue.3e/lib/servaccept.c
#        apue.3e/lib/servlisten.c
#        apue.3e/lib/setfd.c
#        apue.3e/lib/setfl.c
#        apue.3e/lib/signal.c
#        apue.3e/lib/signalintr.c
#        apue.3e/lib/sleep.c
#        apue.3e/lib/sleepus.c
#        apue.3e/lib/spipe.c
#        apue.3e/lib/strerror.c
#        apue.3e/lib/tellwait.c
#        apue.3e/lib/ttymodes.c
#        apue.3e/lib/writen.c
#        apue.3e/printer/ipp.h
#        apue.3e/printer/print.c
#        apue.3e/printer/print.h
#        apue.3e/printer/printd.c
#        apue.3e/printer/util.c
#        apue.3e/proc/echoall.c
#        apue.3e/proc/exec1.c
#        apue.3e/proc/exec2.c
#        apue.3e/proc/fork1.c
#        apue.3e/proc/fork2.c
#        apue.3e/proc/nice.c
#        apue.3e/proc/pracct.c
#        apue.3e/proc/pruids.c
#        apue.3e/proc/system.c
#        apue.3e/proc/systest1.c
#        apue.3e/proc/systest3.c
#        apue.3e/proc/tellwait1.c
#        apue.3e/proc/tellwait2.c
#        apue.3e/proc/test1.c
#        apue.3e/proc/times1.c
#        apue.3e/proc/vfork1.c
#        apue.3e/proc/wait1.c
#        apue.3e/pty/driver.c
#        apue.3e/pty/loop.c
#        apue.3e/pty/main.c
#        apue.3e/relation/orphan3.c
#        apue.3e/signals/abort.c
#        apue.3e/signals/child.c
#        apue.3e/signals/critical.c
#        apue.3e/signals/mask.c
#        apue.3e/signals/read1.c
#        apue.3e/signals/read2.c
#        apue.3e/signals/reenter.c
#        apue.3e/signals/setops.c
#        apue.3e/signals/sigtstp.c
#        apue.3e/signals/sigusr.c
#        apue.3e/signals/sleep1.c
#        apue.3e/signals/sleep2.c
#        apue.3e/signals/suspend1.c
#        apue.3e/signals/suspend2.c
#        apue.3e/signals/system.c
#        apue.3e/signals/systest2.c
#        apue.3e/signals/tsleep2.c
#        apue.3e/sockets/clconn.c
#        apue.3e/sockets/clconn2.c
#        apue.3e/sockets/findsvc.c
#        apue.3e/sockets/initsrv1.c
#        apue.3e/sockets/initsrv2.c
#        apue.3e/sockets/ruptime-dg.c
#        apue.3e/sockets/ruptime.c
#        apue.3e/sockets/ruptimed-dg.c
#        apue.3e/sockets/ruptimed-fd.c
#        apue.3e/sockets/ruptimed.c
#        apue.3e/standards/conf.c
#        apue.3e/standards/options.c
#        apue.3e/stdio/buf.c
#        apue.3e/stdio/fgetsfputs.c
#        apue.3e/stdio/getcharbug.c
#        apue.3e/stdio/getcputc.c
#        apue.3e/stdio/memstr.c
#        apue.3e/stdio/mkstemp.c
#        apue.3e/stdio/tempfiles.c
#        apue.3e/termios/csize.c
#        apue.3e/termios/ctermid.c
#        apue.3e/termios/getpass.c
#        apue.3e/termios/isatty.c
#        apue.3e/termios/settty.c
#        apue.3e/termios/t_getpass.c
#        apue.3e/termios/t_isatty.c
#        apue.3e/termios/t_raw.c
#        apue.3e/termios/t_ttyname.c
#        apue.3e/termios/ttyname.c
#        apue.3e/termios/winch.c
#        apue.3e/threadctl/atfork.c
#        apue.3e/threadctl/detach.c
#        apue.3e/threadctl/getenv1.c
#        apue.3e/threadctl/getenv2.c
#        apue.3e/threadctl/getenv3.c
#        apue.3e/threadctl/suspend.c
#        apue.3e/threadctl/timeout.c
#        apue.3e/threads/badexit2.c
#        apue.3e/threads/barrier.c
#        apue.3e/threads/cleanup.c
#        apue.3e/threads/condvar.c
#        apue.3e/threads/exitstatus.c
#        apue.3e/threads/maketimeout.c
#        apue.3e/threads/mutex1.c
#        apue.3e/threads/mutex2.c
#        apue.3e/threads/mutex3.c
#        apue.3e/threads/rwlock.c
#        apue.3e/threads/threadid.c
#        apue.3e/threads/timedlock.c
#        )
#
#add_executable(APUE ${SOURCE_FILES})




